welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:-6: error: Missing closing brace `}' assumed here
try {
^occurrences:1: error: expected class or object definition
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
^